# vi-encrypt

./: README.md  license.md  main.py  pyproject.toml
src/viencrypt/: main.py
