[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "viencrypt"
version = "0.1.0"
description = "Simple unsafe encryption program"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "art",
    "colorama"
]

[project.scripts]
viencrypt = "viencrypt.main:main"